--- a/index.html
+++ b/index.html
@@ -1,73 +1,1 @@
-<html>
-    <head>
-        <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
-        <title>我的计算器，世界第一帅</title>
-        <script type="text/javascript" language="javascript" charset="utf-8">
-            function upLoadData(){
-                var date = new Date();
-                document.getElementById("showme").innerHTML = document.getElementById("su").value + "，你好！现在是：" + date.toLocaleDateString() + " " + date.toLocaleTimeString() + "。让我们来：";
-            }
-            function jisuan() {
-                var chengshu1 = document.getElementById("chengshu1").value;
-                var chengshu2 = document.getElementById("chengshu2").value;
-                document.getElementById("result").innerHTML = chengshu1 * chengshu2;
-            }
-            function jisuan2() {
-                var jiashu1 = Number(document.getElementById("jiashu1").value);
-                var jiashu2 = Number(document.getElementById("jiashu2").value);
-                document.getElementById("result2").innerHTML = jiashu1 + jiashu2;
-            }
-            function jisuan3() {
-                var beichushu = document.getElementById("beichushu").value;
-                var chushu = document.getElementById("chushu").value;
-                document.getElementById("result3").innerHTML = beichushu / chushu;
-            }
-            function jisuan4() {
-                var beijianshu = document.getElementById("beijianshu").value;
-                var jianshu = document.getElementById("jianshu").value;
-                document.getElementById("result4").innerHTML = beijianshu - jianshu;
-            }
-        </script>
-    </head>
-    <body>
-        <br>
-        <div align="center">
-            <br>
-            <input id="chengshu1" type="text"/>
-            X
-            <input id="chengshu2" type="text"/>
-            =
-            <span id="result">
-            </span>
-            <br>
-            <input id="jisuan" type="button" style="background:#3385ff;color:#ffffff" value="calculate" onclick="jisuan();"/>
-            <br>
-            <input id="jiashu1" type="text"/>
-            +
-            <input id="jiashu2" type="text"/>
-            =
-            <span id="result2">
-            </span>
-            <br>
-            <input id="jisuan2" type="button" style="background:#3385ff;color:#ffffff" value="calculate" onclick="jisuan2();"/>
-            <br>
-            <input id="beichushu" type="text"/>
-            /
-            <input id="chushu" type="text">
-            =
-            <span id="result3">
-            </span>
-            <br>
-            <input id="jisuan3" type="button" style="background:#3385ff;color:#ffffff" value="calculate" onclick="jisuan3();"/>
-            <br>
-            <input id="beijianshu" type="text">
-            -
-            <input id="jianshu" type="text">
-            =
-            <span id="result4">
-            </span>
-            <br>
-            <input id="jisuan4" type="button" style="background:#3385ff;color:#ffffff" value="calculate" onclick="jisuan4();"/>
-        </div>
-    </body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,user-scalable=no"><link rel="manifest" href="/calculator/manifest.json"><link rel="shortcut icon" href="/calculator/favicon.ico"><title>React Calculator</title><link href="/calculator/static/css/2.5510c45e.chunk.css" rel="stylesheet"><link href="/calculator/static/css/main.86f680a8.chunk.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><a class="github-fork-ribbon left-top" href="https://github.com/ahfarmer/calculator" title="Fork me on GitHub">Fork me on GitHub</a><script>!function(e){function r(r){for(var n,l,a=r[0],c=r[1],f=r[2],p=0,s=[];p<a.length;p++)l=a[p],Object.prototype.hasOwnProperty.call(o,l)&&o[l]&&s.push(o[l][0]),o[l]=0;for(n in c)Object.prototype.hasOwnProperty.call(c,n)&&(e[n]=c[n]);for(i&&i(r);s.length;)s.shift()();return u.push.apply(u,f||[]),t()}function t(){for(var e,r=0;r<u.length;r++){for(var t=u[r],n=!0,a=1;a<t.length;a++){var c=t[a];0!==o[c]&&(n=!1)}n&&(u.splice(r--,1),e=l(l.s=t[0]))}return e}var n={},o={1:0},u=[];function l(r){if(n[r])return n[r].exports;var t=n[r]={i:r,l:!1,exports:{}};return e[r].call(t.exports,t,t.exports,l),t.l=!0,t.exports}l.m=e,l.c=n,l.d=function(e,r,t){l.o(e,r)||Object.defineProperty(e,r,{enumerable:!0,get:t})},l.r=function(e){"undefined"!=typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(e,Symbol.toStringTag,{value:"Module"}),Object.defineProperty(e,"__esModule",{value:!0})},l.t=function(e,r){if(1&r&&(e=l(e)),8&r)return e;if(4&r&&"object"==typeof e&&e&&e.__esModule)return e;var t=Object.create(null);if(l.r(t),Object.defineProperty(t,"default",{enumerable:!0,value:e}),2&r&&"string"!=typeof e)for(var n in e)l.d(t,n,function(r){return e[r]}.bind(null,n));return t},l.n=function(e){var r=e&&e.__esModule?function(){return e.default}:function(){return e};return l.d(r,"a",r),r},l.o=function(e,r){return Object.prototype.hasOwnProperty.call(e,r)},l.p="/calculator/";var a=this.webpackJsonpcalculator=this.webpackJsonpcalculator||[],c=a.push.bind(a);a.push=r,a=a.slice();for(var f=0;f<a.length;f++)r(a[f]);var i=c;t()}([])</script><script src="/calculator/static/js/2.ad41f766.chunk.js"></script><script src="/calculator/static/js/main.c89a9525.chunk.js"></script></body></html>
